1。百度智能云 图像文字识别通用文字识别接口 2。校验提交健康码

--- a/spring-boot-activiti/pom.xml
+++ b/spring-boot-activiti/pom.xml
@@ -7,6 +7,19 @@
     <dependencies>
 
 
+        <!--测试百度通用文字识别接口所需依赖-->
+        <dependency>
+            <groupId>commons-httpclient</groupId>
+            <artifactId>commons-httpclient</artifactId>
+            <version>3.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20160810</version>
+        </dependency>
+
         <!--热部署-->
         <!-- optional=true,依赖不会传递，该项目依赖devtools；之后依赖该项目的项目如果想要使用devtools，需要重新引入 -->
 
