--- a/spring-boot-activiti/src/main/resources/application.yml
+++ b/spring-boot-activiti/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     url: jdbc:mysql://localhost:3306/myActiviti?useUnicode=true&characterEncoding=UTF-8
     driver-class-name: com.mysql.jdbc.Driver
     username: root
-    password: 123456
+    password: admin
   activiti:
     database-schema-update: true
     check-process-definitions: true
