--- a/spring-boot-activiti/pom.xml
+++ b/spring-boot-activiti/pom.xml
@@ -6,6 +6,13 @@
     <version>1.1</version>
     <dependencies>
 
+        <!--SSH-->
+        <dependency>
+            <groupId>ch.ethz.ganymed</groupId>
+            <artifactId>ganymed-ssh2</artifactId>
+            <version>262</version>
+        </dependency>
+
 
         <!--邮件通知-->
         <dependency>
